[project]
name = "ragas-examples"
description = "Official examples for the ragas project"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "ragas",  # workspace dependency - version managed by workspace
    "openai>=1.0.0",  # required for LLM calls in examples
    "pandas",  # required for benchmark_llm examples
]
dynamic = ["version", "readme"]

[project.optional-dependencies]
gdrive = ["ragas[gdrive]"]

[project.urls]
Homepage = "https://github.com/explodinggradients/ragas"
Documentation = "https://docs.ragas.io"
Code = "https://github.com/explodinggradients/ragas"
Issues = "https://github.com/explodinggradients/ragas/issues"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ragas_examples*"]

[tool.setuptools.package-data]
ragas_examples = ["**/*.csv"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "ragas_examples/_version.py"
root = ".."
# Sync with main package version tags (v1.2.3)
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"

# Workspace member configuration  
[tool.uv.sources]
ragas = { workspace = true }
