[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "nbdev>=2.3.35"]
build-backend = "setuptools.build_meta"

[project]
name="ragas_experimental"
description = "Experimental extensions for Ragas"
requires-python=">=3.9"
# List all fields that might be defined outside pyproject.toml as dynamic
dynamic = ["version", "readme", "license", "authors", "dependencies", "optional-dependencies"]

[project.entry-points."ragas.backends"]
local_csv = "ragas_experimental.project.backends.local_csv:LocalCSVProjectBackend"
platform = "ragas_experimental.project.backends.platform:PlatformProjectBackend"

[tool.setuptools_scm]
root = ".."  # Points to monorepo root, one directory up
version_file = "ragas_experimental/_version.py"  # Creates a version file

[dependency-groups]
dev = [
    "nbdev>=2.3.35",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-mock>=3.10.0",
    "black",
    "fastcore",
    "tqdm",
    "langfuse",
    "instructor",
    "pydantic",
    "numpy",
    "plotly",
    "mlflow",
    "gitpython",
]
test = []

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "experimental_ci: Set of tests that will be run as part of Experimental CI",
    "e2e: End-to-End tests for Experimental",
]
