[project]
name = "ragas-webview-cli"
version = "0.1.0"
description = "Web-based file viewer with React frontend and Python backend"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Ragas Team", email = "contact@ragas.io"}
]
keywords = ["webview", "file-viewer", "react", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pendulum>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",  # For testing FastAPI
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# No scripts - use python -m ragas_webview_cli.cli or direct import

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ragas_webview_cli"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Removed ragas-experimental dependency

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py39"

[tool.black]
line-length = 88
target-version = ["py39"]
